Import _default files from main site

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <html>
-    {{- partial "head.html" . -}}
-    <body>
-        {{- partial "header.html" . -}}
-        <div id="content">
+{{- partial "head.html" . -}}
+<body>
+{{- partial "battery-meter.html" . -}}
+<div class="wrapper">
+
+    {{- partial "header.html" . -}}
+    <hr>
+    {{- partial "navigation.html" . -}}
+    {{- partial "translations.html" . -}}
+    <hr>
+    <div id="content">
         {{- block "main" . }}{{- end }}
-        </div>
-        {{- partial "footer.html" . -}}
-    </body>
+    </div>
+    <hr>
+    {{- partial "footer.html" . -}}
+
+</div>
+</body>
 </html>
