--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -2,9 +2,10 @@
     <div class="row">
         <div class="eleven column">
             <a class="logo" href="{{ .Site.BaseURL }}{{ .Site.Language }}">
-                <h1>Dan Baghilovici's minimalist website
+                <h1>(DB) "LOW" WEBSITE
                 </h1>
             </a>
         </div>
     </div>
+    <p>This is an importante notice </p>
 </header>
